--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://workout-api-sxgf.onrender.com/",
+  "proxy": "https://workout-api-sxgf.onrender.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
